<resources>
    <string name="app_name">Служба 112 Белгород</string>
    <string name="navigation_drawer_open">Открыть навигационное меню</string>
    <string name="navigation_drawer_close">Закрыть навигационное меню</string>
    <string name="nav_header_name">User Name</string>
    <string name="nav_header_email">user.email@android.com</string>
    <string name="action_settings">Настройки</string>
    <string name="incident_add">Добавить событие</string>
    <string name="json_error">Ошибка передачи данных</string>
    <string name="news_found">Новостей нет</string>
    <string name="no_connection">Нет интернета</string>
    <string name="message_subject">Тема сообщения</string>
    <string name="address_value">Адрес</string>
    <string name="enter_address">Введите адрес</string>
    <string name="description_of_Incident">Описание проишествия</string>
    <string name="describe_situation_in_detail">Подробно опишите ситуацию</string>
    <string name="upload_image">Загрузить изображение</string>
    <string name="value_ok">ОК</string>
    <string name="account_sign_in">Войти</string>
    <string name="account_sign_out">Выйти</string>
    <string name="unautorized_header_name">Для добавления инцидента</string>
    <string name="unautorized_header_email">нужно авторизироваться</string>
    <string name="successful_authorization">Успешно авторизировались</string>
    <string name="successful_unauthorization">Успешно деавторизировались</string>


    <string-array name="catlist">
        <item>Вызов скорой помощи</item>
        <item>ДТП</item>
        <item>Затопление</item>
        <item>Пожар</item>
        <item>Другие проишествия</item>
    </string-array>

</resources>
